# rag_multidoc_agent

./: .gitignore  README.md  config.yaml  pyproject.toml
examples/: use_rag_agent.py
notebooks/: rag_agent.ipynb
src/rag_multidoc_agent/: __init__.py  agent.py  main.py
