[project]
name = "rag-multidoc-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "raistln",email = "samumarfon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=0.3.23,<0.4.0)",
    "llama-index-core (>=0.12.30,<0.13.0)",
    "langchain-huggingface (>=0.1.2,<0.2.0)",
    "langchain-mistralai (>=0.2.10,<0.3.0)"
]

[tool.poetry]
packages = [{include = "rag_multidoc_agent", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
